[gd_scene load_steps=15 format=3 uid="uid://buoq5hkopjydp"]

[ext_resource type="PackedScene" uid="uid://c4m8ja0uorn45" path="res://Main/Player/Player.tscn" id="1_4wbho"]
[ext_resource type="Script" path="res://Main/main.gd" id="1_6atm7"]
[ext_resource type="PackedScene" uid="uid://c2xoo5sd5ga8u" path="res://Main/Environment/Sun.tscn" id="2_35fdn"]
[ext_resource type="PackedScene" uid="uid://cpwy34jgvhxa7" path="res://Main/GUI/Settings/InputSettings.tscn" id="2_2420r"]
[ext_resource type="PackedScene" uid="uid://dgu27pi6pnrhm" path="res://Main/Player/GUI/ShipCursor.tscn" id="3_ija6w"]
[ext_resource type="Script" path="res://Main/GUI/fpsLabel.gd" id="4_sekis"]
[ext_resource type="PackedScene" uid="uid://dxa6xif2pbt5k" path="res://Main/GUI/death_screen.tscn" id="5_ikyxl"]
[ext_resource type="PackedScene" uid="uid://cfl1xsdo0pylf" path="res://Main/GUI/RadarScene.tscn" id="6_ysssl"]
[ext_resource type="PackedScene" uid="uid://t6fcxu1o6f5b" path="res://Main/GUI/movement_display.tscn" id="7_hr4vx"]
[ext_resource type="Script" path="res://Main/Environment/Sun.gd" id="8_cn62n"]
[ext_resource type="Script" path="res://Main/Enemy/WaveSpawner.gd" id="8_urq70"]
[ext_resource type="Script" path="res://Main/Environment/StarSpawner.gd" id="9_o6gks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkqsf"]
bg_color = Color(0, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdfhv"]
bg_color = Color(0.137255, 0.407843, 0.639216, 0.784314)

[node name="Main" type="Node"]
script = ExtResource("1_6atm7")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="InputSettings" parent="GUI" instance=ExtResource("2_2420r")]
visible = false

[node name="ShipCursor" parent="GUI" instance=ExtResource("3_ija6w")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
reticleSize = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="fpsLabel" type="Label" parent="GUI/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_sekis")

[node name="SpeedLabel" type="Label" parent="GUI/VBoxContainer"]
layout_mode = 2
text = "Speed: (0,0,0)"

[node name="DeathScreen" parent="GUI" instance=ExtResource("5_ikyxl")]
visible = false

[node name="PlayElements" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="Control" parent="GUI/PlayElements"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -299.0
offset_top = 10.0
offset_right = 299.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Background" type="PanelContainer" parent="GUI/PlayElements/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -20.0
offset_right = 298.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Foreground" type="PanelContainer" parent="GUI/PlayElements/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -15.0
offset_right = 292.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthProgress" type="ProgressBar" parent="GUI/PlayElements/HealthBar/Foreground"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_fkqsf")
theme_override_styles/fill = SubResource("StyleBoxFlat_cdfhv")
allow_greater = true

[node name="Radar" type="Control" parent="GUI/PlayElements"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
grow_horizontal = 0
grow_vertical = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="GUI/PlayElements/Radar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="GUI/PlayElements/Radar/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(250, 250)
render_target_update_mode = 4

[node name="Radar" parent="GUI/PlayElements/Radar/SubViewportContainer/SubViewport" instance=ExtResource("6_ysssl")]

[node name="MoveDisplay" type="Control" parent="GUI/PlayElements"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -250.0
offset_right = 250.0
grow_vertical = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="GUI/PlayElements/MoveDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="GUI/PlayElements/MoveDisplay/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(250, 250)
render_target_update_mode = 4

[node name="MovementDisplay" parent="GUI/PlayElements/MoveDisplay/SubViewportContainer/SubViewport" instance=ExtResource("7_hr4vx")]

[node name="Player" parent="." node_paths=PackedStringArray("SpeedLabel") instance=ExtResource("1_4wbho")]
SpeedLabel = NodePath("../GUI/VBoxContainer/SpeedLabel")
maxTurnSpeed = 2.0
turnCutOff = 0.05

[node name="WaveSpawner" type="Node3D" parent="."]
script = ExtResource("8_urq70")
maxEnemiesAlive = 2
minEnemiesKilledToSpawn = 0

[node name="SpawnTimer" type="Timer" parent="WaveSpawner"]
wait_time = 5.0
autostart = true

[node name="SunScene" parent="." instance=ExtResource("2_35fdn")]
script = ExtResource("8_cn62n")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SunScene"]
light_color = Color(1, 0.282353, 0.909804, 1)
shadow_transmittance_bias = 2.313

[node name="ParticleSpawner" type="Node3D" parent="."]
script = ExtResource("9_o6gks")

[connection signal="Quit" from="GUI/DeathScreen" to="." method="Quit"]
[connection signal="Retry" from="GUI/DeathScreen" to="." method="Retry"]
[connection signal="PlayerDeath" from="Player" to="." method="PlayerDeath"]
[connection signal="timeout" from="WaveSpawner/SpawnTimer" to="WaveSpawner" method="_on_spawn_timer_timeout"]
